data/derived/comb/progs/unify/prog1266.ml.out
Characters 62-75:
  | h::t -> t::[listReverse l];;
                ^^^^^^^^^^^^^
Error: This expression has type 'a list list
       but an expression was expected of type 'a list
       The type variable 'a occurs inside 'a list
